--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "firebase": "^11.8.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0"
+    "react-native-screens": "~4.10.0",
+    "expo-linear-gradient": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
